--- a/Untitled.Rmd
+++ b/Untitled.Rmd
@@ -3,8 +3,8 @@ title: "Untitled"
 author: "pritom"
 date: "10/2/2021"
 output:
-  pdf_document: default
   html_document: default
+  pdf_document: default
 ---
 
 ```{r setup, include=FALSE}
@@ -64,28 +64,24 @@ par_pseudo <-
             mutate_all(.funs = ~ ifelse(str_detect(.x, "-"), paste0("`", .x, "`"), .x)) %>%
             mutate(id = row_number(), .before = everything()) %>%
             pivot_longer(-id) %>%
-            mutate(name = parse_number(name)) %>%
+            # mutate(name = parse_number(name)) %>%
             group_by(id) %>%
             summarise(formula = paste(value, collapse = " + ")) %>%
             mutate(
                 model = map(formula, .f = ~ glm(
                     paste(dependent_var, " ~ ", .x), family = binomial(), data
                 )),
+                formula = map(model, ~deparse(formula(.x))),
+                formula = unlist(formula),
                 pseudoR2 = map(model, PseudoR2),
                 pseudoR2 = unlist(pseudoR2)
-            )
+            ) 
     }
 
 par_pseudo(data = adult)
 ```
 
 
-```{r}
-x <- glm(class ~ `marital-status`, family = binomial(), adult)
-summary(x)
-adult<-data.frame(adult)
-PseudoR2(x)
-```
 
 
 
